# hypgame

./: .gitignore  Cargo.toml  build.cmd  build2.cmd  server.py
rustweb/: Cargo.toml
rustweb-bundler/: Cargo.toml  TODO.txt
rustweb-bundler/src/: main.rs
rustweb-code/: Cargo.toml
rustweb-code/src/: conflict_tree.rs  glsl.rs  glsl.rs_  glsl_bundler.rs  hyp_parser.rs  hyp_resolver.rs  hyp_to_glsl.rs  hyp_to_js.rs  js.rs  js_ast.rs  js_bundler.rs  lib.rs  wasm.rs
rustweb-code/src/binary/: bundler.rs  mod.rs
rustweb-code/src/hyp/: mod.rs  parser.rs  resolver.rs
rustweb-macro/: Cargo.toml
rustweb-macro/src/: lib.rs
rustweb/maps/: keytest.txt  map01.txt  map01bin.txt  teletest.txt
rustweb/music/: 0xFCcqKL  64QgKpSP.base64  64QgKpSP_shuf  64QgKpSP_shuf.base64  64QgKpSP_unpacked  QV8N7z0v  demo-space.js.txt  demo.js.txt  song-test.js.txt  song.js.txt  xHZyOWO9_base64
rustweb/music/soundbox-master/: gui.js
rustweb/pkg/: experiment.js
rustweb/src/: TODO.txt  editor.hyp  game_js.hyp  game_js.rs  lib.hyp  lib.rs  main_glsl.hyp  nebula.glsl  render.hyp  starmap.glsl  state.hyp  synth.hyp  vecmath.hyp  vertex_glsl.hyp
rustweb/src/experiment/: experiment.mjs  fs2d.glsl  fs3d.glsl  fs3d_img.glsl  fs_img.glsl  index.html  key.glsl  mat.mjs  model.mjs  render.mjs  vs3d.glsl  wall.glsl
rustweb/src/glsl/: main.hyp  vertex.hyp
rustweb/src/glsl_examples/: shining_supernova.glsl  small_star_texture.glsl  wet_stone.glsl
rustweb/src/phystest/: phystest.hyp
rustweb/src/phystest/glsl/: main.hyp  vertex.hyp
rustweb/test/: musictest.js  phystest.js  rustweb-test.html  rustweb.html  rustweb.js
