[package]
name = "rustweb_code"
version = "0.1.0"
authors = ["Erik Lindroos <gliptic@gliptic.com>"]
edition = "2018"

[dependencies]
#syn = { version = "0.15", features = ["extra-traits"] }
syn = { version = "1.0", features = ["extra-traits", "full"] }
serde = { version = "1.0.98", features = ["derive"] }
bincode = "1.1.4"
bytes = "0.4.12"
base64 = "0.10.1"
gimli = "0.19.0"