[package]
name = "rustweb"
version = "0.1.0"
authors = ["Erik Lindroos <gliptic@gliptic.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#wasm-bindgen = "=0.2.40"
wee_alloc = { version = "0.4.3", default-features = false }
rustweb_macro = { path = "../rustweb-macro" }
unchecked-index = "0.2.2"